wxc/include/ewxw/wxc_glue.h



/* wxStatusBar */
TClassDefExtend(wxStatusBar,wxWindow)
TClass(wxStatusBar) wxStatusBar_Create( TClass(wxWindow) _prt, int _id, TRect(_lft,_top,_wdt,_hgt), int _stl );

int        wxStatusBar_GetBorderX( TSelf(wxStatusBar) _obj );

int        wxStatusBar_GetBorderY( TSelf(wxStatusBar) _obj );

int        wxStatusBar_GetFieldsCount( TSelf(wxStatusBar) _obj );

TStringLen wxStatusBar_GetStatusText( TSelf(wxStatusBar) _obj, int number, TStringOutVoid _buf );

void       wxStatusBar_SetFieldsCount( TSelf(wxStatusBar) _obj, int number, int* widths );

void       wxStatusBar_SetMinHeight( TSelf(wxStatusBar) _obj, int height );

void       wxStatusBar_SetStatusText( TSelf(wxStatusBar) _obj, TStringVoid text, int number );

void       wxStatusBar_SetStatusWidths( TSelf(wxStatusBar) _obj, int n, int* widths );